--- a/locale/la.po
+++ b/locale/la.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-03 17:20-0700\n"
-"PO-Revision-Date: 2018-08-11 22:01-0500\n"
+"POT-Creation-Date: 2018-08-09 13:43-0700\n"
+"PO-Revision-Date: 2018-08-08 15:27-0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: en_US\n"
+"Language: la\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -31,103 +31,90 @@ msgstr ""
 
 #: main.c:137
 msgid " output:\n"
-msgstr " salida:\n"
+msgstr " fructus:\n"
 
 #: main.c:148 main.c:221
-#, fuzzy
 msgid ""
 "Auto-reload is on. Simply save files over USB to run them or enter REPL to "
 "disable.\n"
 msgstr ""
-"Auto-recarga esta habilitado. Simplemente almacena los archivos vía USB para "
-"ejecutarlos o entra REPL para deshabilitar.\n"
+"Reload Auto-in. Sive in USB files nisi tantum currere et intraveritis ut "
+"disable REPL.\n"
 
 #: main.c:150
-#, fuzzy
 msgid "Running in safe mode! Auto-reload is off.\n"
-msgstr "Corriendo en modo seguro! Auto-recarga esta deshabilitado.\n"
+msgstr "In tutum currit modus! Auto-Reload non vigilat.\n"
 
 #: main.c:152 main.c:223
-#, fuzzy
 msgid "Auto-reload is off.\n"
-msgstr "Auto-recarga esta deshabilitado.\n"
+msgstr "Auto-Reload non vigilat.\n"
 
 #: main.c:166
 msgid "Running in safe mode! Not running saved code.\n"
-msgstr "Ejecutando en modo seguro! No se esta ejecutando el código guardado.\n"
+msgstr "In tutum currit modus! Non salvus codice currit.\n"
 
 #: main.c:182
-#, fuzzy
 msgid "WARNING: Your code filename has two extensions\n"
-msgstr "ADVERTENCIA: El nombre de archivo de tu código tiene dos extensiones\n"
+msgstr "Navigatorium retiale tuum systemati codice name has duas extensiones\n"
 
 #: main.c:230
 msgid "You requested starting safe mode by "
-msgstr "Solicitaste iniciar el modo seguro por "
+msgstr "Incipiens a salvum modus desiderabas "
 
 #: main.c:233
 msgid "To exit, please reset the board without "
-msgstr "Para salir, por favor reinicia la tarjeta sin "
+msgstr "Exire, obsecro, absque reset tabula "
 
 #: main.c:240
-#, fuzzy
 msgid ""
 "You are running in safe mode which means something really bad happened.\n"
-msgstr ""
-"Estas corriendo en modo seguro lo que significa que algo realmente malo ha "
-"sucedido.\n"
+msgstr "Vos autem modus currit et in tutum re vera id quod factum est malum.\n"
 
 #: main.c:242
 msgid "Looks like our core CircuitPython code crashed hard. Whoops!\n"
 msgstr ""
-"Parece que nuestro código núcleo CircuitPython dejó de funcionar. Whoops!\n"
+"CircuitPython difficile core codice nostro vultus amo ingruat. Et ululatus!\n"
 
 #: main.c:243
-#, fuzzy
 msgid "Please file an issue here with the contents of your CIRCUITPY drive:\n"
 msgstr ""
-"Por favor archiva un problema aquí con los contenidos de tu almacenamiento "
-"CIRCUITPY:\n"
+"Placere file proventus per coegi CIRCUITPY tuus hic praedicationis "
+"contenta:\n"
 
 #: main.c:246
 msgid ""
 "The microcontroller's power dipped. Please make sure your power supply "
 "provides\n"
 msgstr ""
-"La alimentación del microcontrolador se hundió. Por favor asegúrate de que "
-"tu fuente de alimentación provee\n"
+"De potestate microcontroller porrexero. Quaeso, scrutare copiam praebet "
+"potentia tua,\n"
 
 #: main.c:247
 msgid ""
 "enough power for the whole circuit and press reset (after ejecting "
 "CIRCUITPY).\n"
-msgstr ""
-"suficiente corriente para todo el circuito y presiona reset (después de "
-"expulsar CIRCUITPY).\n"
+msgstr "totum orbem viribus adeat Reddere (post eiciendo CIRCUITPY).\n"
 
 #: main.c:251
-#, fuzzy
 msgid "Press any key to enter the REPL. Use CTRL-D to reload."
-msgstr ""
-"Presiona cualquier tecla para entrar el REPL. Usa CTRL-D para recargar."
+msgstr "Key Preme quisquam intrare in REPL. CTRL-D ad uti reload."
 
 #: main.c:406
 msgid "soft reboot\n"
-msgstr "reinicio suave\n"
+msgstr "mollis reboot\n"
 
 #: ports/atmel-samd/common-hal/analogio/AnalogIn.c:63
-#, fuzzy
 msgid "Pin does not have ADC capabilities"
-msgstr "El pin no tiene capacidades de ADC"
+msgstr "Pin ADC angulo elit non habet"
 
 #: ports/atmel-samd/common-hal/analogio/AnalogOut.c:53
 msgid "AnalogOut not supported on given pin"
-msgstr ""
+msgstr "AnalogOut non valet datis supra pin"
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:147
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:150
 msgid "Invalid bit clock pin"
-msgstr ""
+msgstr "Aliquam et frenum horologium pin"
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:153
 msgid "Bit clock and word select must share a clock unit"
@@ -135,20 +122,19 @@ msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:156
 #: ports/atmel-samd/common-hal/audiobusio/PDMIn.c:130
-#, fuzzy
 msgid "Invalid data pin"
-msgstr "Pin de datos inválido"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:169
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:174
 #: ports/atmel-samd/common-hal/audiobusio/PDMIn.c:145
 #: ports/atmel-samd/common-hal/audiobusio/PDMIn.c:150
 msgid "Serializer in use"
-msgstr "Serializador en uso"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:230
 msgid "Clock unit in use"
-msgstr "Unidad de reloj en uso"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:240
 #: ports/atmel-samd/common-hal/audiobusio/PDMIn.c:172
@@ -157,12 +143,12 @@ msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:254
 msgid "Too many channels in sample."
-msgstr "Demasiados canales en muestra."
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:305
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:322
 msgid "No DMA channel found"
-msgstr "No se encontró el canal DMA"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c:308
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:324
@@ -170,9 +156,8 @@ msgid "Unable to allocate buffers for signed conversion"
 msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/PDMIn.c:109
-#, fuzzy
 msgid "Invalid clock pin"
-msgstr "Pin de reloj inválido"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/PDMIn.c:134
 msgid "Only 8 or 16 bit mono with "
@@ -184,7 +169,7 @@ msgstr ""
 
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:69
 msgid "DAC already in use"
-msgstr "El DAC ya esta siendo utilizado"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:73
 msgid "Right channel unsupported"
@@ -193,17 +178,16 @@ msgstr ""
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:76
 #: ports/atmel-samd/common-hal/pulseio/PWMOut.c:116
 #: ports/atmel-samd/common-hal/touchio/TouchIn.c:65
-#, fuzzy
 msgid "Invalid pin"
-msgstr "Pin inválido"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:84
 msgid "Invalid pin for left channel"
-msgstr "Pin inválido para canal izquierdo"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:88
 msgid "Invalid pin for right channel"
-msgstr "Pin inválido para canal derecho"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:91
 msgid "Cannot output both channels on the same pin"
@@ -212,9 +196,8 @@ msgstr ""
 #: ports/atmel-samd/common-hal/audioio/AudioOut.c:173
 #: ports/atmel-samd/common-hal/pulseio/PWMOut.c:186
 #: ports/atmel-samd/common-hal/pulseio/PulseOut.c:110
-#, fuzzy
 msgid "All timers in use"
-msgstr "Todos los timers están siendo utilizados"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/busio/I2C.c:45
 msgid "Not enough pins available"
@@ -222,19 +205,16 @@ msgstr ""
 
 #: ports/atmel-samd/common-hal/busio/I2C.c:76
 #: ports/atmel-samd/common-hal/busio/UART.c:119
-#, fuzzy
 msgid "Invalid pins"
-msgstr "Pines inválidos"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/busio/I2C.c:99
-#, fuzzy
 msgid "SDA or SCL needs a pull up"
-msgstr "SDA o SCL necesitan una pull up"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/busio/I2C.c:119
-#, fuzzy
 msgid "Unsupported baudrate"
-msgstr "Baudrate no soportado"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/busio/UART.c:66
 msgid "bytes > 8 bits not supported"
@@ -249,18 +229,16 @@ msgid "Failed to allocate RX buffer"
 msgstr ""
 
 #: ports/atmel-samd/common-hal/busio/UART.c:147
-#, fuzzy
 msgid "Could not initialize UART"
-msgstr "No se pudo inicializar la UART"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/busio/UART.c:234
-#, fuzzy
 msgid "No RX pin"
-msgstr "No hay pin RX"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/busio/UART.c:284
 msgid "No TX pin"
-msgstr "No hay pin TX"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/digitalio/DigitalInOut.c:168
 msgid "Cannot get pull while in output mode"
@@ -272,9 +250,8 @@ msgstr ""
 
 #: ports/atmel-samd/common-hal/pulseio/PWMOut.c:120
 #: ports/atmel-samd/common-hal/pulseio/PWMOut.c:366
-#, fuzzy
 msgid "Invalid PWM frequency"
-msgstr "Frecuencia de PWM inválida"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/pulseio/PWMOut.c:184
 msgid "All timers for this pin are in use"
@@ -298,9 +275,8 @@ msgid "pop from an empty PulseIn"
 msgstr ""
 
 #: ports/atmel-samd/common-hal/pulseio/PulseIn.c:235 py/obj.c:404
-#, fuzzy
 msgid "index out of range"
-msgstr "index fuera de rango"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/pulseio/PulseOut.c:178
 msgid "Another send is already active"
@@ -332,14 +308,12 @@ msgid "Buffer incorrect size. Should be %d bytes."
 msgstr ""
 
 #: ports/atmel-samd/common-hal/usb_hid/Device.c:82
-#, fuzzy
 msgid "USB Busy"
-msgstr "USB en uso"
+msgstr ""
 
 #: ports/atmel-samd/common-hal/usb_hid/Device.c:82
-#, fuzzy
 msgid "USB Error"
-msgstr "Error de USB"
+msgstr ""
 
 #: py/argcheck.c:44
 msgid "function does not take keyword arguments"
@@ -459,7 +433,7 @@ msgstr ""
 
 #: py/compile.c:955
 msgid "'break' outside loop"
-msgstr ""
+msgstr "‘break’ extra loop"
 
 #: py/compile.c:958
 msgid "'continue' outside loop"
@@ -520,7 +494,7 @@ msgstr ""
 #: py/compile.c:2463 py/compile.c:2473 py/compile.c:2712 py/compile.c:2742
 #: py/parse.c:1176
 msgid "invalid syntax"
-msgstr ""
+msgstr "syntax invalidum"
 
 #: py/compile.c:2465
 msgid "expecting key:value for dict"
@@ -627,6 +601,15 @@ msgstr ""
 msgid "must use keyword argument for key function"
 msgstr ""
 
+#: py/modmath.c:41 shared-bindings/math/__init__.c:53
+msgid "math domain error"
+msgstr ""
+
+#: py/modmath.c:196 py/objfloat.c:270 py/objint_longlong.c:222
+#: py/objint_mpz.c:230 py/runtime.c:619 shared-bindings/math/__init__.c:346
+msgid "division by zero"
+msgstr "nulla divisio"
+
 #: py/modmicropython.c:155
 msgid "schedule stack full"
 msgstr ""
@@ -662,24 +645,25 @@ msgid "Unsupported operation"
 msgstr ""
 
 #: py/moduerrno.c:114
+#, fuzzy
 msgid "Invalid argument"
-msgstr ""
+msgstr "syntax invalidum"
 
 #: py/obj.c:89
 msgid "Traceback (most recent call last):\n"
-msgstr ""
+msgstr "Traceback (Ultima vocatio recentissimus):\n"
 
 #: py/obj.c:92
 msgid "  File \"%q\", line %d"
-msgstr ""
+msgstr "  File “%q”, recta %d"
 
 #: py/obj.c:94
 msgid "  File \"%q\""
-msgstr ""
+msgstr "  File “%q”"
 
 #: py/obj.c:101
 msgid ", in %q\n"
-msgstr ""
+msgstr ", apud %q\n"
 
 #: py/obj.c:241
 msgid "can't convert to int"
@@ -796,8 +780,9 @@ msgid "can't do truncated division of a complex number"
 msgstr ""
 
 #: py/objcomplex.c:209
+#, fuzzy
 msgid "complex division by zero"
-msgstr ""
+msgstr "nulla divisio"
 
 #: py/objcomplex.c:237
 msgid "0.0 to a complex power"
@@ -852,8 +837,9 @@ msgid "float too big"
 msgstr ""
 
 #: py/objint.c:328
+#, fuzzy
 msgid "long int not supported in this build"
-msgstr ""
+msgstr "AnalogOut non valet datis supra pin"
 
 #: py/objint.c:334 py/objint.c:340 py/objint.c:350 py/objint.c:358
 msgid "small int overflow"
@@ -1387,9 +1373,8 @@ msgid "stop must be 1 or 2"
 msgstr ""
 
 #: shared-bindings/digitalio/DigitalInOut.c:211
-#, fuzzy
 msgid "Invalid direction."
-msgstr "Dirección inválida."
+msgstr ""
 
 #: shared-bindings/digitalio/DigitalInOut.c:240
 msgid "Cannot set value when direction is input."
@@ -1416,14 +1401,6 @@ msgstr ""
 #: shared-bindings/gamepad/GamePad.c:104
 msgid "expected a DigitalInOut"
 msgstr ""
-
-#: shared-bindings/math/__init__.c:53
-msgid "math domain error"
-msgstr ""
-
-#: shared-bindings/math/__init__.c:346
-msgid "division by zero"
-msgstr "división por cero"
 
 #: shared-bindings/microcontroller/Pin.c:89
 #: shared-bindings/neopixel_write/__init__.c:67
@@ -1482,9 +1459,8 @@ msgid "index must be int"
 msgstr ""
 
 #: shared-bindings/pulseio/PulseIn.c:293
-#, fuzzy
 msgid "Read-only"
-msgstr "Solo lectura"
+msgstr ""
 
 #: shared-bindings/pulseio/PulseOut.c:134
 msgid "Array must contain halfwords (type 'H')"
